sharpKnocking/Doc/iptables-example
# Este fichero es un ejemplo de configuración de iptables para redhat que puede
# servir de modelo a la hora de generar los comandos para iptables y de guardarlos
# Generated by iptables-save v1.2.11 on Thu Oct  5 18:50:03 2006
# Modified by root # Por defecto se acepta el tráfico en los 3 canales
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [105358:25501977]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A FORWARD -j RH-Firewall-1-INPUT
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
#Basta hacer esto para bloquear una ip
#-A RH-Firewall-1-INPUT -s 68.162.82.138 -j DROP
#Continue normal rulling
#Permite todo el tráfico icmp. Normalmente yo prefiero que la máquina esté oculta
#al icmp (evita algunos tipos de escaneo de puertos)
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type any -j ACCEPT
#Permite seguridad ipv6
-A RH-Firewall-1-INPUT -p ipv6-crypt -j ACCEPT
-A RH-Firewall-1-INPUT -p ipv6-auth -j ACCEPT
#Esto creo que es para multicast. Puede quitarse hasta que algo falle y luego volverlo
#a poner
-A RH-Firewall-1-INPUT -d 224.0.0.251 -p udp -m udp --dport 5353 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m udp --dport 631 -j ACCEPT
#Las conexiones ya establecidas se permiten sin mas. El estado de una conexión lo lleva
#internamente iptables así que no lo pueden falsear facilmente
-A RH-Firewall-1-INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
#Conexiones NUEVAS permitidas. Con estas reglas se puede jugar para permitir en un
#momento dado conexiónes entrantes en un puerto dado. También podríamos incluir en
#la regla la ip del cliente que se va a conectar para permitirle sólo a él el paso
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 18080 -j ACCEPT
#Aquí van las opciones de logueo de paquetes. Tratamos de loguear con un prefijo 
#que luego usaremos para encontrar entradas en el fichero.
-A RH-Firewall-1-INPUT -j LOG --log-prefix "DROPLOG:"
#Todo lo que llegue aquí se descarta sin mensaje de vuelta ni nada. A efectos prácticos
#como si le hubieras mandado el paquete al /dev/null
-A RH-Firewall-1-INPUT -j DROP
#Esta línea es para mandar un mensaje "amigable" al rechazar el paquete.
#-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-unreachable
COMMIT
# Completed on Thu Oct  5 18:50:03 2006
